[package]
name = "jstrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
har = { git = "https://github.com/Kalhama/har-rs.git", version = "0.8.1" }
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
pretty_env_logger = "0.4.0"
regex = "1.7.3"
tokio = { version = "1.27.0", features = ["full"] }
url = "2.3.1"
