[package]
name = "doublesite"
version = "0.1.0"
edition = "2021"
description = "Alternative for httrack"
license = "Unlicense"
documentation = "https://docs.rs/crate/doublesite"
homepage = "https://github.com/Kalhama/doublesite"
repository = "https://github.com/Kalhama/doublesite"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = { version = "4.2.1", features = ["derive"] }
har-v0-8-1 = "0.8.1"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
once_cell = "1.17.1"
pretty_env_logger = "0.4.0"
regex = "1.7.3"
tokio = { version = "1.27.0", features = ["full"] }
url = "2.3.1"

[package.metadata.release]
pre-release-hook = ["git-cliff", "-p", "CHANGELOG.md", "-u", "--tag", "{{version}}"]
